remove no sleep for founders

--- a/beta.html
+++ b/beta.html
@@ -4,7 +4,7 @@
 	<title>Moonarch</title>
 	<!-- Add Fav Icon -->
 	<!-- Main purple color: #431984 --->
-	<link rel="stylesheet" href="./css/styles.css">
+	<link rel="stylesheet" href="./css/option2.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Aqulia Capital is building infrastructure for early stage investing"> <!-- Google Search Description -->
@@ -82,7 +82,7 @@
         <img height="50" width="50" src="./assets/database.png" />
         <div class="whiteText">Unlimited access to our extensive database</div>
       </div>
-      <a href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank" class="callButton buttonMargin">SIGN UP</a>
+      <a href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank" class="callButton buttonMargin">JOIN NOW</a>
 
       <div class="emptySpace"></div>
       <div class="flexRow spaceBetween textCol"> <!-- blackBox animationCard -->
@@ -111,18 +111,18 @@
         <img height="50" width="50" src="./assets/verified.png" />
         <div class="whiteText">Events with world-class speakers and mentors</div>
       </div>
-      <a href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank" class="callButton buttonMargin">SIGN UP</a>
+      <a href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank" class="callButton buttonMargin">JOIN NOW</a>
 
     </div>
 
     <div class="emptySpace"></div>
     <div class="wrapList pageMargins">
-      <!-- <div>
+      <div>
         <div class="blueTitle">
           No Sleep for Founders
         </div>
         <div class="whiteText">The economy may be slowing but innovation isn't: no matter what happens, founders will continue to innovate and transform the world. Agile and innovative startups often easily adapt to changing market conditions and continue finding new opportunities for growth. Recessions can even provide new opportunities for startups as established companies struggle and consumers look for more affordable alternatives. Founders need your funding more now than ever to continue innovating and pushing their startups to become the next big thing.</div>
-      </div>     -->
+      </div>    
       <!-- whiteBox -->
       <div class="emptySpace"></div>
       <div class=""> 
