added Derrick and fixed footer

--- a/beta.html
+++ b/beta.html
@@ -4,7 +4,7 @@
 	<title>Moonarch</title>
 	<!-- Add Fav Icon -->
 	<!-- Main purple color: #431984 --->
-	<link rel="stylesheet" href="./css/option2.css">
+	<link rel="stylesheet" href="./css/beta.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Aqulia Capital is building infrastructure for early stage investing"> <!-- Google Search Description -->
@@ -47,10 +47,10 @@
           <div class="num">20<span class="num" style="font-size: 80px">+</span></div>
           <div class="numText">angels</div>
         </div>
-        <div class="flexColumn numCol">
+        <!-- <div class="flexColumn numCol">
           <div class="num">5<span class="num" style="font-size: 80px"></span></div>
           <div class="numText">speakers</div>
-        </div>
+        </div> -->
       </div>
     </div>
 
@@ -58,15 +58,15 @@
       <div class="emptySpace"></div>
       <div class="flexRow spaceBetween textCol">  <!--  class="blackBox animationCard" -->
         <div class="flexColumn">
-          <div class="blueTitle">
-            Access the Future
+          <img height="400" width="1000" src="./assets/databaseLight.svg" />
+          <div class="flexRow">
+            <img height="50" width="50" src="./assets/world.png" />
+            <div class="blueTitle">
+              DISCOVER HUNDREDS OF STARTUPS WORLD WIDE
+            </div>
           </div>
-          <div class="whiteText">We provide a centralized and easily accessible platform for you to discover and research promising early-stage companies. By using our database, angel investors can quickly filter and search through a large pool of startups, helping them to identify the best investment opportunities based on their criteria. Join our community today and access an ecosystem of hundreds of startups backed by the best accelerators and incubators across the world.</div>
         </div>
         <div class="flexColumn">
-          <!-- <div class="imgPlaceholder">
-            <img class="landscapeImg" src="./assets/blueRocketLaunch.png" />
-          </div> -->
         </div>
       </div>
       <!-- <div class="emptySpace"></div> -->
