--- a/index.html
+++ b/index.html
@@ -160,6 +160,12 @@
             <div class="greyText">Wellington VC & BLCK VC Co-founder</div>
             <a href="https://www.linkedin.com/in/frederikgroce/" target="_blank" class="callButton shortButton">About</a>
           </div>
+          <div class="flexColumn flexCenter speakerBox">
+            <div class="speakerImg"><img class="croppedImg" src="./assets/derrick.jpeg" /></div>
+            <div class="blackTitle">Derrick Raphael</div>
+            <div class="greyText">CEO, Founder</div>
+            <a href="https://www.linkedin.com/in/derrickraphael/" target="_blank" class="callButton shortButton">About</a>
+          </div>
         </div>
       </div>
       <div class="emptySpace"></div>
@@ -256,7 +262,7 @@
   </div>
 
   <div class="flexRow spaceBetween footer">
-    <div>&copy; 2023 Aquila Capital.</div>
+    <div>&copy; 2023 Moonarch</div>
     <div><a class="footerLink" href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank">Apply to be an angel</a></div>
   </div>
 </main>
