remove excessive white space on top of speaker

--- a/beta.html
+++ b/beta.html
@@ -58,17 +58,41 @@
       <div class="emptySpace"></div>
       <div class="flexRow spaceBetween textCol">  <!--  class="blackBox animationCard" -->
         <div class="flexColumn">
-          <img height="400" width="1000" src="./assets/databaseLight.svg" />
-          <div class="flexRow">
+          <img height="200" width="500" src="./assets/databaseLight-2.svg" />
+          <div class="flexRow imageTitle">
             <img height="50" width="50" src="./assets/world.png" />
             <div class="blueTitle">
-              DISCOVER HUNDREDS OF STARTUPS WORLD WIDE
+              EXTENSIVE DATABASE
             </div>
           </div>
         </div>
-        <div class="flexColumn">
+        <div class="flexColumn spaceBetween">
+          <div class="whiteText" style="font-family: RobotoBlack; font-size: 25px;">Discover hundreds of startups worldwide</div>
+          <div class="whiteText">We provide a centralized platform for you to explore hundreds of early-stage companies backed by the best accelerators across the world.</div>
+          <a href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank" class="callButton buttonMargin">JOIN NOW</a>
         </div>
       </div>
+
+      <div class="emptySpace"></div>
+      
+      <div class="flexRow spaceBetween textCol">  <!--  class="blackBox animationCard" -->
+        <div class="flexColumn">
+          <img height="200" width="500" src="./assets/databaseLight-2.svg" />
+          <div class="flexRow imageTitle">
+            <img height="50" width="50" src="./assets/fast.png" />
+            <div class="blueTitle">
+              INTEREST FILTERS
+            </div>
+          </div>
+        </div>
+        <div class="flexColumn spaceBetween">
+          <div class="whiteText" style="font-family: RobotoBlack; font-size: 25px;">Quickly find startups that fits your interests</div>
+          <div class="whiteText">By using our database, angel investors can quickly filter and search through a large pool of startups, helping them to identify the best investment opportunities based on their criteria.</div>
+          <a href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank" class="callButton buttonMargin">JOIN NOW</a>
+        </div>
+      </div>
+
+
       <!-- <div class="emptySpace"></div> -->
       <div class="flexColumn third animationCard">
         <img height="50" width="50" src="./assets/world.png" />
