--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     </div>
 
-    <div class="emptySpace"></div>
+    <!-- <div class="emptySpace"></div> -->
     <div class="wrapList pageMargins">
       <!-- <div>
         <div class="blueTitle">
