added referal forms

--- a/index.html
+++ b/index.html
@@ -17,9 +17,24 @@
 <body>
 
 <main>
+  <div id="hidingBox"></div>
+  <div id="navbar">
+    <a href="./index.html"><img class="smallLogo" src="./assets/logoText-white.png" /></a>
+    <div class="navLinks" id="navLinksEx">
+      <a href="./angel-form.html" class="navLink">Angel sign up</a>
+      <a href="./startup-form.html" class="navLink">Founder sign up</a>
+    </div>
+    <!-- <div id="navExpand" onclick="expandNav()">x</div> -->
+    <div id="navExpand" onclick="expandNav()">
+      <div id="bar1"></div>
+      <div id="bar2"></div>
+      <div id="bar3"></div>
+    </div>
+  </div>
+
 	<!-- Main header view -->
 	<div class="header">
-      <a href="https://andrewciotto.github.io"><img class="logoTitle" src="./assets/logoText-white.png" /></a>
+      <a href="./index.html"><img class="logoTitle" src="./assets/logoText-white.png" /></a>
   		<p class="headerTitle">
   			Connect with the builders of tomorrow
   		</p> 
@@ -27,7 +42,7 @@
 	</div>
   <div class="mainPage">
     <div class="secondHeader">
-      <a href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank" class="callButton centerButton">SIGN UP</a>
+      <a href="./angel-form.html" class="callButton centerButton">SIGN UP</a>
     </div>
 
     <div class="ecosystem">
@@ -48,7 +63,7 @@
           <div class="numText">angels</div>
         </div>
         <div class="flexColumn numCol">
-          <div class="num">5<span class="num" style="font-size: 80px"></span></div>
+          <div class="num">6<span class="num" style="font-size: 80px"></span></div>
           <div class="numText">speakers</div>
         </div>
       </div>
@@ -82,7 +97,7 @@
         <img height="50" width="50" src="./assets/database.png" />
         <div class="whiteText">Unlimited access to our extensive database</div>
       </div>
-      <a href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank" class="callButton buttonMargin">SIGN UP</a>
+      <a href="./angel-form.html" class="callButton buttonMargin">SIGN UP</a>
 
       <div class="emptySpace"></div>
       <div class="flexRow spaceBetween textCol"> <!-- blackBox animationCard -->
@@ -111,7 +126,7 @@
         <img height="50" width="50" src="./assets/verified.png" />
         <div class="whiteText">Events with world-class speakers and mentors</div>
       </div>
-      <a href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank" class="callButton buttonMargin">SIGN UP</a>
+      <a href="./angel-form.html" class="callButton buttonMargin">SIGN UP</a>
 
     </div>
 
@@ -263,7 +278,7 @@
 
   <div class="flexRow spaceBetween footer">
     <div>&copy; 2023 Moonarch</div>
-    <div><a class="footerLink" href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank">Apply to be an angel</a></div>
+    <div><a class="footerLink" href="./angel-form.html">Apply to be an angel</a></div>
   </div>
 </main>
 </body>
