--- a/beta.html
+++ b/beta.html
@@ -74,12 +74,12 @@
         Our Startup Funnel
       </div>
       <div class="flexRow spaceBetween textCol">  <!--  class="blackBox animationCard" -->
-        <div class="flexColumn flexCenter">
+        <div class="flexColumn flexCenter reveal">
           <div class="backgroundImg">
-            <img height="200" width="200" src="./assets/goldRocket.png" />
+            <img class="infoImg" src="./assets/startupSelection.png" />
           </div>
         </div>
-        <div class="flexColumn stepsBox">
+        <div class="flexColumn stepsBox reveal">
           <div class="flexRow imageTitle">
             <div class="blueTitle">
               STEP ONE
@@ -87,7 +87,7 @@
           </div>
           <div class="blackTitle">Startup Selection</div>
           <div class="whiteText">We select the best startups in North America through partnerships with accelerators and founder networks</div>
-          <a href="./angel-form.html" class="callButton buttonMargin">JOIN NOW</a>
+          <a href="./angel-form.html" class="callButton buttonMargin">SIGN UP</a>
         </div>
       </div>
 
@@ -96,7 +96,7 @@
       </div>
 
       <div class="flexRow spaceBetween textCol reverseRow">  <!--  class="blackBox animationCard" -->
-        <div class="flexColumn stepsBox">
+        <div class="flexColumn stepsBox reveal">
           <div class="flexRow imageTitle">
             <!-- <img height="20" width="20" src="./assets/world.png" /> -->
             <div class="blueTitle">
@@ -105,11 +105,11 @@
           </div>
           <div class="blackTitle">AI Analysis</div>
           <div class="whiteText">We screen each startup through our in-house AI model</div>
-          <a href="./angel-form.html" class="callButton buttonMargin">JOIN NOW</a>
+          <a href="./angel-form.html" class="callButton buttonMargin">SIGN UP</a>
         </div>
-        <div class="flexColumn flexCenter">
+        <div class="flexColumn flexCenter reveal">
           <div class="backgroundImg">
-            <img height="200" width="200" src="./assets/goldRobot.png" />
+            <img class="infoImg" src="./assets/aiAnalysis.png" />
           </div>
         </div>
       </div>
@@ -119,12 +119,12 @@
       </div>
 
       <div class="flexRow spaceBetween textCol">  <!--  class="blackBox animationCard" -->
-        <div class="flexColumn flexCenter">
+        <div class="flexColumn flexCenter reveal">
           <div class="backgroundImg">
-            <img height="200" width="200" src="./assets/goldData.png" />
+            <img class="infoImg" src="./assets/dataRoom.png" />
           </div>
         </div>
-        <div class="flexColumn stepsBox">
+        <div class="flexColumn stepsBox reveal">
           <div class="flexRow imageTitle">
             <!-- <img height="20" width="20" src="./assets/world.png" /> -->
             <div class="blueTitle">
@@ -133,16 +133,16 @@
           </div>
           <div class="blackTitle">Your Data Room</div>
           <div class="whiteText">Get unlimited access to your data room with custom features</div>
-          <a href="./angel-form.html" class="callButton buttonMargin">JOIN NOW</a>
+          <a href="./angel-form.html" class="callButton buttonMargin">SIGN UP</a>
         </div>
       </div>
 
       <div class="emptySpace">
-        <img height="50" width="100" class="arrow" src="./assets/arrow3.png" style="transform: translateX(-30px);"  />
+        <img height="50" width="100" class="arrow" src="./assets/arrow3.png"  />
       </div>
 
       <div class="flexRow spaceBetween textCol reverseRow">  <!--  class="blackBox animationCard" -->
-        <div class="flexColumn stepsBox">
+        <div class="flexColumn stepsBox reveal">
           <div class="flexRow imageTitle">
             <!-- <img height="20" width="20" 2src="./assets/world.png" /> -->
             <div class="blueTitle">
@@ -151,11 +151,11 @@
           </div>
           <div class="blackTitle">Warm Introductions</div>
           <div class="whiteText">We will provide warm introductions to any startup founder that caught your attention</div>
-          <a href="./angel-form.html" class="callButton buttonMargin">JOIN NOW</a>
+          <a href="./angel-form.html" class="callButton buttonMargin">SIGN UP</a>
         </div>
-        <div class="flexColumn flexCenter">
+        <div class="flexColumn flexCenter reveal">
           <div class="backgroundImg">
-            <img height="200" width="200" src="./assets/goldFlame.png" />
+            <img class="infoImg" src="./assets/warmIntros.png" />
           </div>
         </div>
       </div>
@@ -167,37 +167,37 @@
         </div>
         <div class="whiteText">Meet exited-unicorn founders, MPs at prominent funds who will speak on how to foster an investment thesis, diligence strategies & much more!</div>
         <div class="flexRow flexCenter flexWrap">
-          <div class="flexColumn flexCenter speakerBox">
+          <div class="flexColumn flexCenter speakerBox reveal">
             <div class="speakerImg"><img class="croppedImg" src="./assets/alex.jpeg" /></div>
             <div class="blackTitle">Alex Normon</div>
             <div class="greyText">N49P Partner, AngelList Canada</div>
             <a href="https://www.linkedin.com/in/alexanderlnorman/" target="_blank" class="callButton shortButton">About</a>
           </div>
-          <div class="flexColumn flexCenter speakerBox">
+          <div class="flexColumn flexCenter speakerBox reveal">
             <div class="speakerImg"><img class="croppedImg" src="./assets/jeff.jpeg" /></div>
             <div class="blackTitle">Jeff Hoffman</div>
             <div class="greyText">Investor, Philanthropist</div>
             <a href="https://www.linkedin.com/in/jeffhoff/" target="_blank" class="callButton shortButton">About</a>
           </div>
-          <div class="flexColumn flexCenter speakerBox">
+          <div class="flexColumn flexCenter speakerBox reveal">
             <div class="speakerImg"><img class="croppedImg" src="./assets/andre.jpeg" /></div>
             <div class="blackTitle">Andre Charoo</div>
             <div class="greyText">Maple GP & Inovia Venture Partner</div>
             <a href="https://www.linkedin.com/in/acharoo/" target="_blank" class="callButton shortButton">About</a>
           </div>
-          <div class="flexColumn flexCenter speakerBox">
+          <div class="flexColumn flexCenter speakerBox reveal">
             <div class="speakerImg"><img class="croppedImg" src="./assets/geri.jpeg" /></div>
             <div class="blackTitle">Geri Kirilova</div>
             <div class="greyText">Laconia MP</div>
             <a href="https://www.linkedin.com/in/acharoo/" target="_blank" class="callButton shortButton">About</a>
           </div>
-          <div class="flexColumn flexCenter speakerBox">
+          <div class="flexColumn flexCenter speakerBox reveal">
             <div class="speakerImg"><img class="croppedImg" src="./assets/frederik.jpeg" /></div>
             <div class="blackTitle">Frederik Groce</div>
             <div class="greyText">Wellington VC & BLCK VC Co-founder</div>
             <a href="https://www.linkedin.com/in/frederikgroce/" target="_blank" class="callButton shortButton">About</a>
           </div>
-          <div class="flexColumn flexCenter speakerBox">
+          <div class="flexColumn flexCenter speakerBox reveal">
             <div class="speakerImg"><img class="croppedImg" src="./assets/derrick.jpeg" /></div>
             <div class="blackTitle">Derrick Raphael</div>
             <div class="greyText">CEO, Founder</div>
@@ -207,10 +207,10 @@
       </div>
       <div class="emptySpace"></div>
       <div class="">
-        <div class="blueTitle">
+        <div class="whiteTitle" style="color: #721cff">
           Accelerators
         </div>
-        <div class="flexRow flexCenter flexWrap">
+        <div class="flexRow flexCenter flexWrap reveal">
           <div class="aroundPartner">
             <div class="flexColumn partnerLogo">
               <a href="https://fintechcadence.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/fintechCadence.png" /></a>
