made graphics larger

--- a/beta.html
+++ b/beta.html
@@ -189,7 +189,7 @@
             <div class="speakerImg"><img class="croppedImg" src="./assets/geri.jpeg" /></div>
             <div class="blackTitle">Geri Kirilova</div>
             <div class="greyText">Laconia MP</div>
-            <a href="https://www.linkedin.com/in/acharoo/" target="_blank" class="callButton shortButton">About</a>
+            <a href="https://www.linkedin.com/in/gerikirilova/" target="_blank" class="callButton shortButton">About</a>
           </div>
           <div class="flexColumn flexCenter speakerBox reveal">
             <div class="speakerImg"><img class="croppedImg" src="./assets/frederik.jpeg" /></div>
